ajout des couleurs

--- a/font.scss
+++ b/font.scss
@@ -16,7 +16,7 @@
         format("woff2");
 }
 @font-face {
-    font-family: 'fa-solid';
+    font-family: 'fasolid';
     src: url(font/fa-solid-900.woff2); font-weight: 900,
         format("woff2");
 }
