add color white variable

--- a/style.css
+++ b/style.css
@@ -68,7 +68,7 @@ header .topnav .topnav_menu .nav_links2 {
 }
 header .topnav .topnav_menu .nav_links .btn_nav,
 header .topnav .topnav_menu .nav_links2 .btn_nav {
-  background-color: bisque;
+  background-color: #C8A96A;
   padding: 20px 28px;
   border-radius: 5px;
 }
