--- a/style.scss
+++ b/style.scss
@@ -47,7 +47,7 @@ header{
             .nav_links2{
                 gap: 60px;
                 .btn_nav{
-                    background-color: bisque;
+                    background-color: $or;
                     padding: 20px 28px;
                     border-radius: 5px;
                 }
