--- a/variable.css
+++ b/variable.css
@@ -1,1 +1,5 @@
-/*# sourceMappingURL=variable.css.map */
+@charset "UTF-8";
+/* media du header => 
+- passe en menu burger à max 1400px
+Pour le responsive : 
+max 950px, 600px, 350px *//*# sourceMappingURL=variable.css.map */
