--- a/font.scss
+++ b/font.scss
@@ -1,12 +1,10 @@
 @font-face {
-    font-family: 'fabrands';
-    src: url(font/fa-brands-400.woff2); font-weight: 400,
-        format("woff2");
+    font-family: "brands";
+    src: url("font/fa-brands-400.woff2") format("woff2");
 }
-
 @font-face {
     font-family: 'falight';
-    src: url(font/fa-light-300.woff2); font-weight: 300,
+    src: url(./font/fa-light-300.woff2); font-weight: 300,
         format("woff2");
 }
 
