--- a/style.scss
+++ b/style.scss
@@ -24,7 +24,6 @@ header{
     .container{
         background: linear-gradient(to right, rgba(0, 0, 0, 0.500) ,rgba(0, 0, 0, 0)),
                     linear-gradient(to bottom, rgba(0, 0, 0, 0.500), rgba(0, 0, 0, 0));
-
         height: 100%;
         width: 100%;
     }
@@ -37,49 +36,72 @@ header{
     }
     .topnav{
         width: 100%;
-        justify-content: space-between;
+        justify-content: end;
         padding: 40px 80px;
+        .Kababi_logo{
+            position: absolute;
+            left: 60px;
+            top: 40px;
+        }
         .topnav_menu{
-            width: 70%;
+            width: 80%;
             justify-content: space-between;
             align-items: center;
+            padding:15px 0;
             .nav_links,
             .nav_links2{
                 gap: 60px;
-                .btn_nav{
-                    background-color: $or;
-                    padding: 20px 28px;
-                    border-radius: 5px;
+                .home{
+                    color: $or;
                 }
                 li a{
                     color: white;
+                    i{
+                        margin: 0 10px;
+                    }
                 }
+                li img{
+                    margin-right: 10px;
+                }
+                li .btn_nav{
+                    background-color: $or;
+                    padding: 20px 30px;
+                    border-radius: 5px;
+                    font-family: 'brands';
+                    font-weight: 400;
+                }
+        
             }
         }
         .icon_hamburger{
-            display: none;
+            position: absolute;
+            top: 30px;
+            right: 30px;
+            z-index: 100;
+            display: none;          
         }
     }
     .contenu_header{
         width: 100%;
-        margin: 5% 0 0 10%;
-        .img_header{
+        margin: 5% 10%;
+        .imgAndtitle{
             position: relative;
+            width: 30%;
             img{
                 position: absolute;
-                left: 20%;
-                top: -40px;
+                top: -50px;
+                right: 0;
             }
-        }
-        h1{
-            color: white;
-            font-size: 7rem;
-            width: 300px;
-            line-height: 150px;
-            letter-spacing: -7px;
-            font-family: fabrands;
-            font-weight: 400;
-            margin-bottom: 50px;
+            h1{
+                color: white;
+                font-size: 7rem;
+                width: 300px;
+                line-height: 150px;
+                letter-spacing: -7px;
+                font-family: fabrands;
+                font-weight: 400;
+                margin-bottom: 50px;
+            }
         }
         a{
             color: white;
@@ -87,5 +109,100 @@ header{
             border: solid 2px rgba(255, 255, 255, 0.185);
             border-radius: 5px;
         }
+    }
+}
+
+@media only screen and (max-width: 1400px){
+    header{
+        .topnav{
+            .icon_hamburger{
+                display: block;
+            }
+            .topnav_menu,
+            .nav_links,
+            .nav_links2{
+                flex-direction: column; 
+            }
+            .nav_links{
+                margin-bottom: 50px;
+            }
+            .topnav_menu{
+                height: 100vh;
+                padding: 10%;
+                backdrop-filter: blur(15px) ;
+                z-index: 99;
+                justify-content: center;
+                align-items: center;
+                position: absolute;
+                top: 0;
+                right:0;
+                transform-origin: 0% 0%;
+                transform: translate(200%, 0%);
+                transition: transform 0.8s cubic-bezier(0.77, 0.2, 0.05, 1);
+            }
+            .topnav_menu.active{
+                transform: none;
+                position: fixed;
+                transition: transform 0.5 ease;
+                width: 100%;
+            }
+        }  
+        .contenu_header{
+            .imgAndtitle{
+                width: 40%;
+                h1{
+                    font-size: 5rem;
+                }
+            }
+        } 
+    }
+}
+
+@media only screen and (max-width: 950px) {
+    header{
+        .contenu_header{
+            .imgAndtitle{
+                width: 60%;
+                h1{
+                    margin-top: 100px;
+                }
+            }
+        } 
+    }
+}
+
+
+@media only screen and (max-width: 600px) {
+    header{
+        .contenu_header{
+            .imgAndtitle{
+                width: 90%;
+                img{
+                    width: 120px;
+                }
+                h1{
+                    font-size: 4rem;
+                    margin-top: 100px;
+                    line-height: 100px;
+                }
+            }
+        } 
+    }
+}
+
+@media only screen and (max-width: 350px) {
+    header{
+        .contenu_header{
+            .imgAndtitle{
+                img{
+                    width: 100px;
+                }
+                h1{
+                    font-size: 3.5rem;
+                    margin-top: 100px;
+                    line-height: 100px;
+                }
+            }
+        } 
     }
 }
