--- a/style.scss
+++ b/style.scss
@@ -21,7 +21,7 @@ header{
     background-image: url(img/slider/img_bg_slider_home01.jpg);
     background: cover;
     background-repeat: no-repeat;
-    .container{
+    .container_header{
         background: linear-gradient(to right, rgba(0, 0, 0, 0.500) ,rgba(0, 0, 0, 0)),
                     linear-gradient(to bottom, rgba(0, 0, 0, 0.500), rgba(0, 0, 0, 0));
         height: 100%;
