--- a/style.css
+++ b/style.css
@@ -81,4 +81,141 @@ header .topnav .topnav_menu .nav_links2 li a {
 }
 header .topnav .icon_hamburger {
   display: none;
-}/*# sourceMappingURL=style.css.map */
+}
+
+footer {
+  color: rgb(138, 138, 138);
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  background-image: url(./img/footer/img-ng-footer.jpg);
+  background-size: cover;
+  background-repeat: no-repeat;
+  display: flex;
+  gap: 5rem;
+  flex-direction: column;
+  height: 100vh;
+}
+
+.footer-title {
+  margin-bottom: 4rem;
+}
+
+.footer-links {
+  display: flex;
+  justify-content: space-between;
+  width: 80%;
+  margin-bottom: 3rem;
+}
+
+.footer-link {
+  width: 13.66%;
+  display: flex;
+  flex-direction: column;
+  gap: 1.5rem;
+}
+.footer-link h3 {
+  color: rgb(255, 255, 255);
+  font-size: 2rem;
+}
+.footer-link ul {
+  display: flex;
+  flex-direction: column;
+  gap: 1rem;
+}
+.footer-link ul li {
+  display: flex;
+  gap: 0.5rem;
+  cursor: pointer;
+}
+.footer-link ul li i {
+  color: #c8a96a;
+}
+.footer-link ul li:hover {
+  color: white;
+}
+
+.footer-link-input {
+  width: 30%;
+  display: flex;
+  flex-direction: column;
+  gap: 1.5rem;
+}
+.footer-link-input h3 {
+  color: rgb(255, 255, 255);
+  font-size: 2rem;
+}
+.footer-link-input .email-input {
+  width: 100%;
+}
+.footer-link-input .email-input input {
+  padding: 1rem;
+  height: 3rem;
+  width: 70%;
+}
+.footer-link-input .email-input button {
+  height: 100%;
+  width: 3rem;
+  background-color: #c8a96a;
+  border: none;
+}
+.footer-link-input .email-input button:hover {
+  cursor: pointer;
+  background-color: #c8a96a;
+}
+
+.footer-bottom {
+  position: relative;
+  display: flex;
+  justify-content: space-between;
+  width: 80%;
+  padding-top: 6rem;
+  border-top: 1px solid rgba(255, 255, 255, 0.253);
+}
+.footer-bottom img {
+  display: block;
+  position: absolute;
+  left: 0;
+  right: 0;
+  bottom: 4rem;
+  margin: auto;
+  height: 6rem;
+  width: 6rem;
+}
+.footer-bottom p a {
+  text-decoration: none;
+  color: #c8a96a;
+}
+.footer-bottom .footer-socials {
+  display: flex;
+  gap: 2rem;
+}
+.footer-bottom .footer-socials a {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  width: 30px;
+  height: 30px;
+  padding: 0.5rem;
+  border-radius: 50%;
+  background-color: rgb(138, 138, 138);
+  font-size: 1rem;
+  color: #b3b3b3;
+}
+.footer-bottom .footer-socials a:hover {
+  color: white;
+  background-color: #c8a96a;
+}
+
+@media (max-width: 1250px) {
+  img {
+    bottom: 80%;
+  }
+  .footer-bottom {
+    flex-direction: column;
+    align-items: center;
+  }
+}
+
+/*# sourceMappingURL=style.css.map */
