--- a/style.css
+++ b/style.css
@@ -1,8 +1,4 @@
 @charset "UTF-8";
-/* 'fabrands' 400
-    'falight' 300
-    'faregular' 400
-    'fasolid' 900 */
 /* media du header => 
 - passe en menu burger à max 1400px
 Pour le responsive : 
@@ -21,15 +17,13 @@ body {
 
 header {
   height: 100vh;
-}
-
-header {
   background-image: url(img/slider/img_bg_slider_home01.jpg);
   background: cover;
   background-repeat: no-repeat;
 }
-header .container {
-  background: linear-gradient(to right, rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0)), linear-gradient(to bottom, rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0));
+header .container_header {
+  background: linear-gradient(to right, rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0)),
+    linear-gradient(to bottom, rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0));
   height: 100%;
   width: 100%;
 }
@@ -42,30 +36,83 @@ header .nav_links2 {
 }
 header .topnav {
   width: 100%;
-  justify-content: space-between;
+  justify-content: end;
   padding: 40px 80px;
 }
+header .topnav .Kababi_logo {
+  position: absolute;
+  left: 60px;
+  top: 40px;
+}
 header .topnav .topnav_menu {
-  width: 70%;
+  width: 80%;
   justify-content: space-between;
   align-items: center;
+  padding: 15px 0;
 }
 header .topnav .topnav_menu .nav_links,
 header .topnav .topnav_menu .nav_links2 {
   gap: 60px;
 }
-header .topnav .topnav_menu .nav_links .btn_nav,
-header .topnav .topnav_menu .nav_links2 .btn_nav {
-  background-color: bisque;
-  padding: 20px 28px;
-  border-radius: 5px;
+header .topnav .topnav_menu .nav_links .home,
+header .topnav .topnav_menu .nav_links2 .home {
+  color: #c8a96a;
 }
 header .topnav .topnav_menu .nav_links li a,
 header .topnav .topnav_menu .nav_links2 li a {
   color: white;
 }
+header .topnav .topnav_menu .nav_links li a i,
+header .topnav .topnav_menu .nav_links2 li a i {
+  margin: 0 10px;
+}
+header .topnav .topnav_menu .nav_links li img,
+header .topnav .topnav_menu .nav_links2 li img {
+  margin-right: 10px;
+}
+header .topnav .topnav_menu .nav_links li .btn_nav,
+header .topnav .topnav_menu .nav_links2 li .btn_nav {
+  background-color: #c8a96a;
+  padding: 20px 30px;
+  border-radius: 5px;
+  font-family: "brands";
+  font-weight: 400;
+}
 header .topnav .icon_hamburger {
+  position: absolute;
+  top: 30px;
+  right: 30px;
+  z-index: 100;
   display: none;
+}
+header .contenu_header {
+  width: 100%;
+  margin: 5% 10%;
+}
+header .contenu_header .imgAndtitle {
+  position: relative;
+  width: 30%;
+}
+header .contenu_header .imgAndtitle img {
+  position: absolute;
+  top: -50px;
+  right: 0;
+}
+header .contenu_header .imgAndtitle h1 {
+  color: white;
+  font-size: 7rem;
+  width: 300px;
+  line-height: 150px;
+  letter-spacing: -7px;
+  font-family: fabrands;
+  font-weight: 400;
+  margin-bottom: 50px;
+}
+header .contenu_header a {
+  color: white;
+  padding: 15px 30px;
+  border: solid 2px rgba(255, 255, 255, 0.185);
+  border-radius: 5px;
 }
 
 footer {
@@ -193,6 +240,45 @@ footer {
   background-color: #c8a96a;
 }
 
+@media only screen and (max-width: 1400px) {
+  header .topnav .icon_hamburger {
+    display: block;
+  }
+  header .topnav .topnav_menu,
+  header .topnav .nav_links,
+  header .topnav .nav_links2 {
+    flex-direction: column;
+  }
+  header .topnav .nav_links {
+    margin-bottom: 50px;
+  }
+  header .topnav .topnav_menu {
+    height: 100vh;
+    padding: 10%;
+    backdrop-filter: blur(15px);
+    z-index: 99;
+    justify-content: center;
+    align-items: center;
+    position: absolute;
+    top: 0;
+    right: 0;
+    transform-origin: 0% 0%;
+    transform: translate(200%, 0%);
+    transition: transform 0.8s cubic-bezier(0.77, 0.2, 0.05, 1);
+  }
+  header .topnav .topnav_menu.active {
+    transform: none;
+    position: fixed;
+    transition: transform 0.5 ease;
+    width: 100%;
+  }
+  header .contenu_header .imgAndtitle {
+    width: 40%;
+  }
+  header .contenu_header .imgAndtitle h1 {
+    font-size: 5rem;
+  }
+}
 @media (max-width: 1250px) {
   img {
     bottom: 80%;
@@ -200,6 +286,37 @@ footer {
   .footer-bottom {
     flex-direction: column;
     align-items: center;
+  }
+}
+@media only screen and (max-width: 950px) {
+  header .contenu_header .imgAndtitle {
+    width: 60%;
+  }
+  header .contenu_header .imgAndtitle h1 {
+    margin-top: 100px;
+  }
+}
+@media only screen and (max-width: 600px) {
+  header .contenu_header .imgAndtitle {
+    width: 90%;
+  }
+  header .contenu_header .imgAndtitle img {
+    width: 120px;
+  }
+  header .contenu_header .imgAndtitle h1 {
+    font-size: 4rem;
+    margin-top: 100px;
+    line-height: 100px;
+  }
+}
+@media only screen and (max-width: 350px) {
+  header .contenu_header .imgAndtitle img {
+    width: 100px;
+  }
+  header .contenu_header .imgAndtitle h1 {
+    font-size: 3.5rem;
+    margin-top: 100px;
+    line-height: 100px;
   }
 }
 
