--- a/style.scss
+++ b/style.scss
@@ -1,5 +1,6 @@
 @import "variable.scss";
-
+@import "header.scss";
+@import 'footer.scss';
 * {
   box-sizing: border-box;
   padding: 0;
@@ -11,229 +12,6 @@ body {
   width: 100%;
 }
 
-header {
-  height: 100vh;
-  background-image: url(img/slider/img_bg_slider_home01.jpg);
-  background: cover;
-  background-repeat: no-repeat;
-  .container_header {
-    background: linear-gradient(to right, rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0)),
-      linear-gradient(to bottom, rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0));
-    height: 100%;
-    width: 100%;
-  }
-  .topnav,
-  .topnav_menu,
-  .nav_links,
-  .nav_links2 {
-    display: flex;
-    align-items: center;
-  }
-  .topnav {
-    width: 100%;
-    justify-content: end;
-    padding: 40px 80px;
-    .Kababi_logo {
-      position: absolute;
-      left: 60px;
-      top: 40px;
-    }
-    .topnav_menu {
-      width: 80%;
-      justify-content: space-between;
-      align-items: center;
-      padding: 15px 0;
-      .nav_links,
-      .nav_links2 {
-        gap: 60px;
-        .home {
-          color: $or;
-        }
-        li a {
-          color: white;
-          i {
-            margin: 0 10px;
-          }
-        }
-        li img {
-          margin-right: 10px;
-        }
-        li .btn_nav {
-          background-color: $or;
-          padding: 20px 30px;
-          border-radius: 5px;
-          font-family: "brands";
-          font-weight: 400;
-        }
-      }
-    }
-    .icon_hamburger {
-      position: absolute;
-      top: 30px;
-      right: 30px;
-      z-index: 100;
-      display: none;
-    }
-  }
-  .contenu_header {
-    width: 100%;
-    margin: 5% 10%;
-    .imgAndtitle {
-      position: relative;
-      width: 30%;
-      img {
-        position: absolute;
-        top: -50px;
-        right: 0;
-      }
-      h1 {
-        color: white;
-        font-size: 7rem;
-        width: 300px;
-        line-height: 150px;
-        letter-spacing: -7px;
-        font-family: fabrands;
-        font-weight: 400;
-        margin-bottom: 50px;
-      }
-    }
-    a {
-      color: white;
-      padding: 15px 30px;
-      border: solid 2px rgba(255, 255, 255, 0.185);
-      border-radius: 5px;
-    }
-  }
-}
-
-// Footer style
-footer {
-  color: rgb(138, 138, 138);
-  display: flex;
-  flex-direction: column;
-  justify-content: center;
-  align-items: center;
-  background-image: url(./img/footer/img-ng-footer.jpg);
-  background-size: cover;
-  background-repeat: no-repeat;
-  display: flex;
-  gap: 5rem;
-  flex-direction: column;
-  height: 100vh;
-}
-
-.footer-title {
-  margin-bottom: 4rem;
-}
-
-.footer-links {
-  display: flex;
-  justify-content: space-between;
-  width: 80%;
-  margin-bottom: 3rem;
-}
-
-.footer-link {
-  width: 13.66%;
-  display: flex;
-  flex-direction: column;
-  gap: 1.5rem;
-  h3 {
-    color: rgb(255, 255, 255);
-    font-size: 2rem;
-  }
-  ul {
-    display: flex;
-    flex-direction: column;
-    gap: 1rem;
-    li {
-      display: flex;
-      gap: 0.5rem;
-      cursor: pointer;
-      i {
-        color: #c8a96a;
-      }
-      &:hover {
-        color: white;
-      }
-    }
-  }
-}
-
-.footer-link-input {
-  width: 30%;
-  display: flex;
-  flex-direction: column;
-  gap: 1.5rem;
-  h3 {
-    color: rgb(255, 255, 255);
-    font-size: 2rem;
-  }
-  .email-input {
-    width: 100%;
-    input {
-      padding: 1rem;
-      height: 3rem;
-      width: 70%;
-    }
-    button {
-      height: 100%;
-      width: 3rem;
-      background-color: #c8a96a;
-      border: none;
-      &:hover {
-        cursor: pointer;
-        background-color: #c8a96a;
-      }
-    }
-  }
-}
-
-.footer-bottom {
-  position: relative;
-  display: flex;
-  justify-content: space-between;
-  width: 80%;
-  padding-top: 6rem;
-  border-top: 1px solid rgba(255, 255, 255, 0.253);
-  img {
-    display: block;
-    position: absolute;
-    left: 0;
-    right: 0;
-    bottom: 4rem;
-    margin: auto;
-    height: 6rem;
-    width: 6rem;
-  }
-  p {
-    a {
-      text-decoration: none;
-      color: #c8a96a;
-    }
-  }
-
-  .footer-socials {
-    display: flex;
-    gap: 2rem;
-    a {
-      display: flex;
-      justify-content: center;
-      align-items: center;
-      width: 30px;
-      height: 30px;
-      padding: 0.5rem;
-      border-radius: 50%;
-      background-color: rgb(138, 138, 138);
-      font-size: 1rem;
-      color: #b3b3b3;
-      &:hover {
-        color: white;
-        background-color: #c8a96a;
-      }
-    }
-  }
-}
 @media only screen and (max-width: 1400px) {
   header {
     .topnav {
