--- a/style.scss
+++ b/style.scss
@@ -1,6 +1,8 @@
 @import "variable.scss";
 @import "header.scss";
-@import 'footer.scss';
+@import "footer.scss";
+@import "latest-news.scss";
+
 * {
   box-sizing: border-box;
   padding: 0;
