--- a/style.css
+++ b/style.css
@@ -3,18 +3,6 @@
 - passe en menu burger à max 1400px
 Pour le responsive : 
 max 950px, 600px, 350px */
-* {
-  box-sizing: border-box;
-  padding: 0;
-  margin: 0;
-  text-decoration: none;
-  list-style: none;
-}
-
-body {
-  width: 100%;
-}
-
 header {
   height: 100vh;
   background-image: url(img/slider/img_bg_slider_home01.jpg);
@@ -22,8 +10,7 @@ header {
   background-repeat: no-repeat;
 }
 header .container_header {
-  background: linear-gradient(to right, rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0)),
-    linear-gradient(to bottom, rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0));
+  background: linear-gradient(to right, rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0)), linear-gradient(to bottom, rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0));
   height: 100%;
   width: 100%;
 }
@@ -56,7 +43,7 @@ header .topnav .topnav_menu .nav_links2 {
 }
 header .topnav .topnav_menu .nav_links .home,
 header .topnav .topnav_menu .nav_links2 .home {
-  color: #c8a96a;
+  color: #C8A96A;
 }
 header .topnav .topnav_menu .nav_links li a,
 header .topnav .topnav_menu .nav_links2 li a {
@@ -72,7 +59,7 @@ header .topnav .topnav_menu .nav_links2 li img {
 }
 header .topnav .topnav_menu .nav_links li .btn_nav,
 header .topnav .topnav_menu .nav_links2 li .btn_nav {
-  background-color: #c8a96a;
+  background-color: #C8A96A;
   padding: 20px 30px;
   border-radius: 5px;
   font-family: "brands";
@@ -115,6 +102,76 @@ header .contenu_header a {
   border-radius: 5px;
 }
 
+@media only screen and (max-width: 1400px) {
+  header .topnav .icon_hamburger {
+    display: block;
+  }
+  header .topnav .topnav_menu,
+  header .topnav .nav_links,
+  header .topnav .nav_links2 {
+    flex-direction: column;
+  }
+  header .topnav .nav_links {
+    margin-bottom: 50px;
+  }
+  header .topnav .topnav_menu {
+    height: 100vh;
+    padding: 10%;
+    backdrop-filter: blur(15px);
+    z-index: 99;
+    justify-content: center;
+    align-items: center;
+    position: absolute;
+    top: 0;
+    right: 0;
+    transform-origin: 0% 0%;
+    transform: translate(200%, 0%);
+    transition: transform 0.8s cubic-bezier(0.77, 0.2, 0.05, 1);
+  }
+  header .topnav .topnav_menu.active {
+    transform: none;
+    position: fixed;
+    transition: transform 0.5 ease;
+    width: 100%;
+  }
+  header .contenu_header .imgAndtitle {
+    width: 40%;
+  }
+  header .contenu_header .imgAndtitle h1 {
+    font-size: 5rem;
+  }
+}
+@media only screen and (max-width: 950px) {
+  header .contenu_header .imgAndtitle {
+    width: 60%;
+  }
+  header .contenu_header .imgAndtitle h1 {
+    margin-top: 100px;
+  }
+}
+@media only screen and (max-width: 600px) {
+  header .contenu_header .imgAndtitle {
+    width: 90%;
+  }
+  header .contenu_header .imgAndtitle img {
+    width: 120px;
+  }
+  header .contenu_header .imgAndtitle h1 {
+    font-size: 4rem;
+    margin-top: 100px;
+    line-height: 100px;
+  }
+}
+@media only screen and (max-width: 350px) {
+  header .contenu_header .imgAndtitle img {
+    width: 100px;
+  }
+  header .contenu_header .imgAndtitle h1 {
+    font-size: 3.5rem;
+    margin-top: 100px;
+    line-height: 100px;
+  }
+}
 footer {
   color: rgb(138, 138, 138);
   display: flex;
@@ -238,6 +295,31 @@ footer {
 .footer-bottom .footer-socials a:hover {
   color: white;
   background-color: #c8a96a;
+}
+
+@media (max-width: 1250px) {
+  img {
+    bottom: 80%;
+  }
+  .footer-bottom {
+    flex-direction: column;
+    align-items: center;
+  }
+}
+.latest-news {
+  height: 100vh;
+}
+
+* {
+  box-sizing: border-box;
+  padding: 0;
+  margin: 0;
+  text-decoration: none;
+  list-style: none;
+}
+
+body {
+  width: 100%;
 }
 
 @media only screen and (max-width: 1400px) {
