--- a/variable.scss
+++ b/variable.scss
@@ -3,9 +3,7 @@
 Pour le responsive : 
 max 950px, 600px, 350px */
 
-
-
-$or : #C8A96A;
-$creme : #FAF6F0 ;
-$grey : #9D9E9F ;
-$white : #FFFFFF;
+$or: #c8a96a;
+$creme: #f1ece4;
+$grey: #9d9e9f;
+$white: #ffffff;
