Finished news section - still missing responsive

--- a/latest-news.scss
+++ b/latest-news.scss
@@ -4,15 +4,15 @@
   flex-direction: column;
   justify-content: center;
   align-items: center;
+  gap: 4rem;
 }
 
 .news-container {
-  padding: 3rem;
-  border: 1px solid black;
   width: 80%;
   display: flex;
   gap: 2rem;
-  justify-content: center;
+  padding: 3rem 0rem;
+  justify-content: space-between;
   align-items: center;
 }
 
@@ -28,6 +28,7 @@
     width: 100%;
   }
   button {
+    background-color: $white;
     font-weight: bold;
     font-size: 0.8rem;
     width: 50%;
@@ -58,4 +59,10 @@
   p {
     font-size: 0.9rem;
   }
+}
+
+.news-photos {
+  width: 80%;
+  display: flex;
+  justify-content: space-around;
 }
