--- a/header.scss
+++ b/header.scss
@@ -1,12 +1,12 @@
 header {
-    height: 100vh;
+    min-height: 90vh;
     background-image: url(img/slider/img_bg_slider_home01.jpg);
     background: cover;
     background-repeat: no-repeat;
     .container_header {
       background: linear-gradient(to right, rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0)),
         linear-gradient(to bottom, rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0));
-      height: 100%;
+      height: 90vh;
       width: 100%;
     }
     .topnav,
@@ -144,6 +144,7 @@ header {
           width: 60%;
           h1 {
             margin-top: 100px;
+            font-size: 5rem;
           }
         }
       }
