--- a/style.scss
+++ b/style.scss
@@ -1,6 +1,14 @@
 @import "variable.scss";
 @import "header.scss";
 @import 'footer.scss';
+@import 'choose_your_best_category.scss';
+/* media du header => 
+- passe en menu burger à max 1400px
+Pour le responsive : 
+max 950px, 600px, 350px */
+
+/* media du footer =>
+1250px*/
 * {
   box-sizing: border-box;
   padding: 0;
@@ -12,107 +20,6 @@ body {
   width: 100%;
 }
 
-@media only screen and (max-width: 1400px) {
-  header {
-    .topnav {
-      .icon_hamburger {
-        display: block;
-      }
-      .topnav_menu,
-      .nav_links,
-      .nav_links2 {
-        flex-direction: column;
-      }
-      .nav_links {
-        margin-bottom: 50px;
-      }
-      .topnav_menu {
-        height: 100vh;
-        padding: 10%;
-        backdrop-filter: blur(15px);
-        z-index: 99;
-        justify-content: center;
-        align-items: center;
-        position: absolute;
-        top: 0;
-        right: 0;
-        transform-origin: 0% 0%;
-        transform: translate(200%, 0%);
-        transition: transform 0.8s cubic-bezier(0.77, 0.2, 0.05, 1);
-      }
-      .topnav_menu.active {
-        transform: none;
-        position: fixed;
-        transition: transform 0.5 ease;
-        width: 100%;
-      }
-    }
-    .contenu_header {
-      .imgAndtitle {
-        width: 40%;
-        h1 {
-          font-size: 5rem;
-        }
-      }
-    }
-  }
-}
 
-@media (max-width: 1250px) {
-  img {
-    bottom: 80%;
-  }
-  .footer-bottom {
-    flex-direction: column;
-    align-items: center;
-    // gap: 2rem;
-  }
-}
 
-@media only screen and (max-width: 950px) {
-  header {
-    .contenu_header {
-      .imgAndtitle {
-        width: 60%;
-        h1 {
-          margin-top: 100px;
-        }
-      }
-    }
-  }
-}
 
-@media only screen and (max-width: 600px) {
-  header {
-    .contenu_header {
-      .imgAndtitle {
-        width: 90%;
-        img {
-          width: 120px;
-        }
-        h1 {
-          font-size: 4rem;
-          margin-top: 100px;
-          line-height: 100px;
-        }
-      }
-    }
-  }
-}
-
-@media only screen and (max-width: 350px) {
-  header {
-    .contenu_header {
-      .imgAndtitle {
-        img {
-          width: 100px;
-        }
-        h1 {
-          font-size: 3.5rem;
-          margin-top: 100px;
-          line-height: 100px;
-        }
-      }
-    }
-  }
-}
