--- a/footer.scss
+++ b/footer.scss
@@ -1,139 +1,175 @@
-
 // Footer style
 footer {
-    color: rgb(138, 138, 138);
+  color: rgb(138, 138, 138);
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  background-image: url(./img/footer/img-ng-footer.jpg);
+  background-size: cover;
+  background-repeat: no-repeat;
+  display: flex;
+  gap: 5rem;
+  flex-direction: column;
+  min-height: 100vh;
+}
+
+.footer-title {
+  margin-bottom: 7rem;
+}
+
+.footer-links {
+  display: flex;
+  justify-content: space-between;
+  width: 80%;
+  margin-bottom: 3rem;
+}
+
+.footer-link {
+  width: 13.66%;
+  display: flex;
+  flex-direction: column;
+  gap: 1.5rem;
+  h3 {
+    color: rgb(255, 255, 255);
+    font-size: 2rem;
+  }
+  ul {
     display: flex;
     flex-direction: column;
-    justify-content: center;
-    align-items: center;
-    background-image: url(./img/footer/img-ng-footer.jpg);
-    background-size: cover;
-    background-repeat: no-repeat;
-    display: flex;
-    gap: 5rem;
-    flex-direction: column;
-    height: 100vh;
-  }
-  
-  .footer-title {
-    margin-bottom: 4rem;
-  }
-  
-  .footer-links {
-    display: flex;
-    justify-content: space-between;
-    width: 80%;
-    margin-bottom: 3rem;
-  }
-  
-  .footer-link {
-    width: 13.66%;
-    display: flex;
-    flex-direction: column;
-    gap: 1.5rem;
-    h3 {
-      color: rgb(255, 255, 255);
-      font-size: 2rem;
-    }
-    ul {
+    gap: 1rem;
+    li {
       display: flex;
-      flex-direction: column;
-      gap: 1rem;
-      li {
-        display: flex;
-        gap: 0.5rem;
-        cursor: pointer;
-        i {
-          color: #c8a96a;
-        }
-        &:hover {
-          color: white;
-        }
-      }
-    }
-  }
-  
-  .footer-link-input {
-    width: 30%;
-    display: flex;
-    flex-direction: column;
-    gap: 1.5rem;
-    h3 {
-      color: rgb(255, 255, 255);
-      font-size: 2rem;
-    }
-    .email-input {
-      width: 100%;
-      input {
-        padding: 1rem;
-        height: 3rem;
-        width: 70%;
-      }
-      button {
-        height: 100%;
-        width: 3rem;
-        background-color: #c8a96a;
-        border: none;
-        &:hover {
-          cursor: pointer;
-          background-color: #c8a96a;
-        }
-      }
-    }
-  }
-  
-  .footer-bottom {
-    position: relative;
-    display: flex;
-    justify-content: space-between;
-    width: 80%;
-    padding-top: 6rem;
-    border-top: 1px solid rgba(255, 255, 255, 0.253);
-    img {
-      display: block;
-      position: absolute;
-      left: 0;
-      right: 0;
-      bottom: 4rem;
-      margin: auto;
-      height: 6rem;
-      width: 6rem;
-    }
-    p {
-      a {
-        text-decoration: none;
+      gap: 0.5rem;
+      cursor: pointer;
+      i {
         color: #c8a96a;
       }
-    }
-  
-    .footer-socials {
-      display: flex;
-      gap: 2rem;
-      a {
-        display: flex;
-        justify-content: center;
-        align-items: center;
-        width: 30px;
-        height: 30px;
-        padding: 0.5rem;
-        border-radius: 50%;
-        background-color: rgb(138, 138, 138);
-        font-size: 1rem;
-        color: #b3b3b3;
-        &:hover {
-          color: white;
-          background-color: #c8a96a;
-        }
+      &:hover {
+        color: white;
       }
     }
+  }
 }
-@media (max-width: 1250px) {
-    img {
-      bottom: 80%;
+
+.footer-link-input {
+  width: 30%;
+  display: flex;
+  flex-direction: column;
+  gap: 1.5rem;
+  h3 {
+    color: rgb(255, 255, 255);
+    font-size: 2rem;
+  }
+  .email-input {
+    width: 100%;
+    input {
+      padding: 1rem;
+      height: 3rem;
+      width: 70%;
     }
-    .footer-bottom {
-      flex-direction: column;
-      align-items: center;
-      // gap: 2rem;
+    button {
+      height: 100%;
+      width: 3rem;
+      background-color: #c8a96a;
+      border: none;
+      &:hover {
+        cursor: pointer;
+        background-color: #c8a96a;
+      }
     }
   }
+}
+
+.footer-bottom {
+  position: relative;
+  display: flex;
+  justify-content: space-between;
+  width: 80%;
+  padding-top: 4rem;
+  border-top: 1px solid rgba(255, 255, 255, 0.253);
+  img {
+    position: absolute;
+    top: 0;
+    left: 0;
+    right: 0;
+    bottom: 80%;
+    margin: auto;
+    height: 6rem;
+    width: 6rem;
+  }
+  p {
+    a {
+      text-decoration: none;
+      color: #c8a96a;
+    }
+  }
+
+  .footer-socials {
+    display: flex;
+    gap: 2rem;
+    a {
+      display: flex;
+      justify-content: center;
+      align-items: center;
+      width: 30px;
+      height: 30px;
+      padding: 0.5rem;
+      border-radius: 50%;
+      background-color: rgb(138, 138, 138);
+      font-size: 1rem;
+      color: #b3b3b3;
+      &:hover {
+        color: white;
+        background-color: #c8a96a;
+      }
+    }
+  }
+}
+@media (max-width: 1250px) {
+  .footer-title {
+    margin-top: 3rem;
+  }
+  .footer-bottom {
+    flex-direction: column;
+    align-items: center;
+    gap: 3rem;
+    p {
+      margin-top: 2rem;
+    }
+  }
+  .footer-socials {
+    margin-bottom: 3.5rem;
+  }
+}
+
+@media (max-width: 1100px) {
+  .footer-links {
+    display: grid;
+    grid-template-columns: 60% 40%;
+    row-gap: 5rem;
+    column-gap: 1rem;
+  }
+  .footer-link {
+    width: 100%;
+    display: grid;
+    flex-direction: column;
+  }
+
+  .footer-link-input {
+    width: 100%;
+  }
+}
+
+@media (max-width: 750px) {
+  .footer-links {
+    display: grid;
+    row-gap: 5rem;
+  }
+}
+
+// @media (max-width: 600px) {
+//   .footer-links {
+//     grid-template-columns: 60% 20%;
+//   }
+// }
