--- a/latest-news.scss
+++ b/latest-news.scss
@@ -1,31 +1,46 @@
 .latest-news {
-  height: 100vh;
+  position: relative;
+  min-height: 100vh;
   display: flex;
   flex-direction: column;
-  justify-content: center;
+  gap: 3rem;
   align-items: center;
-  gap: 4rem;
 }
 
+.p-top {
+  position: absolute;
+  top: 0;
+  left: 0;
+  font-size: 12rem;
+}
+
+.latest-news-title {
+  display: flex;
+  flex-direction: column;
+  gap: 1rem;
+  margin: 7rem 0 3rem 0;
+  text-align: center;
+}
 .news-container {
   width: 80%;
   display: flex;
-  gap: 2rem;
-  padding: 3rem 0rem;
   justify-content: space-between;
   align-items: center;
+  gap: 2rem;
 }
 
 .news {
+  width: 30%;
   background-color: $creme;
   display: flex;
   flex-direction: column;
   align-items: center;
-  width: 22rem;
   gap: 1rem;
+  height: 100%;
   img {
-    height: 15rem;
+    display: block;
     width: 100%;
+    height: 100%;
   }
   button {
     background-color: $white;
@@ -34,6 +49,7 @@
     width: 50%;
     padding: 1rem;
     border: none;
+    border-radius: 0.35rem;
     &:hover {
       cursor: pointer;
       background-color: $or;
@@ -43,7 +59,7 @@
 }
 
 .news-text {
-  padding: 2rem 0rem;
+  padding: 1rem 1rem 2rem 1rem;
   width: 80%;
   display: flex;
   flex-direction: column;
@@ -52,7 +68,7 @@
 .date-user {
   display: flex;
   justify-content: flex-start;
-  gap: 0.7rem;
+  gap: 1rem;
   i {
     color: $or;
   }
@@ -65,4 +81,93 @@
   width: 80%;
   display: flex;
   justify-content: space-around;
+  margin-bottom: 7rem;
+}
+
+@media (max-width: 1450px) {
+  .news {
+    width: 35%;
+  }
+}
+
+@media (max-width: 1300px) {
+  .news {
+    width: 35%;
+  }
+  .news-text {
+    padding-bottom: 1rem;
+    button {
+      width: 60%;
+    }
+  }
+
+  .date-user {
+    gap: 1rem;
+  }
+
+  .news-photos {
+    margin-top: 2rem;
+    img {
+      height: 4rem;
+      width: 4rem;
+    }
+  }
+}
+
+@media (max-width: 1300px) {
+  .news-container {
+    flex-direction: column;
+  }
+  .news {
+    width: 100%;
+    flex-direction: row;
+  }
+  .news-text {
+    align-items: center;
+    justify-content: center;
+  }
+}
+
+@media (max-width: 1000px) {
+  .news {
+    img {
+      width: 40%;
+      height: 100%;
+    }
+  }
+}
+
+@media (max-width: 900px) {
+  .news {
+    flex-direction: column;
+    width: 50%;
+    .news-text {
+      padding: 0 0 1rem 0;
+    }
+    img {
+      width: 100%;
+    }
+    button {
+      width: 90%;
+    }
+  }
+}
+
+@media (max-width: 600px) {
+  .p-top {
+    font-size: 3rem;
+  }
+  .date-user {
+    flex-direction: column;
+    p {
+      font-size: 0.8rem;
+    }
+  }
+  .news-photos {
+    img {
+      height: 3.5rem;
+      width: 3.5rem;
+    }
+    gap: 1rem;
+  }
 }
