--- a/style.css
+++ b/style.css
@@ -32,6 +32,7 @@ header .topnav .Kababi_logo {
   top: 40px;
 }
 header .topnav .topnav_menu {
+  display: none;
   width: 80%;
   justify-content: space-between;
   align-items: center;
@@ -74,7 +75,6 @@ header .topnav .icon_hamburger {
 }
 header .contenu_header {
   width: 100%;
-  margin: 5% 10%;
 }
 header .contenu_header .imgAndtitle {
   position: relative;
@@ -184,11 +184,11 @@ footer {
   display: flex;
   gap: 5rem;
   flex-direction: column;
-  height: 100vh;
+  min-height: 100vh;
 }
 
 .footer-title {
-  margin-bottom: 4rem;
+  margin-bottom: 7rem;
 }
 
 .footer-links {
@@ -259,15 +259,15 @@ footer {
   display: flex;
   justify-content: space-between;
   width: 80%;
-  padding-top: 6rem;
+  padding-top: 4rem;
   border-top: 1px solid rgba(255, 255, 255, 0.253);
 }
 .footer-bottom img {
-  display: block;
   position: absolute;
+  top: 0;
   left: 0;
   right: 0;
-  bottom: 4rem;
+  bottom: 80%;
   margin: auto;
   height: 6rem;
   width: 6rem;
@@ -298,43 +298,88 @@ footer {
 }
 
 @media (max-width: 1250px) {
-  img {
-    bottom: 80%;
+  .footer-title {
+    margin-top: 3rem;
   }
   .footer-bottom {
     flex-direction: column;
     align-items: center;
+    gap: 3rem;
+  }
+  .footer-bottom p {
+    margin-top: 2rem;
+  }
+  .footer-socials {
+    margin-bottom: 3.5rem;
+  }
+}
+@media (max-width: 1100px) {
+  .footer-links {
+    display: grid;
+    grid-template-columns: 60% 40%;
+    row-gap: 5rem;
+    column-gap: 1rem;
+  }
+  .footer-link {
+    width: 100%;
+    display: grid;
+    flex-direction: column;
+  }
+  .footer-link-input {
+    width: 100%;
+  }
+}
+@media (max-width: 750px) {
+  .footer-links {
+    display: grid;
+    row-gap: 5rem;
   }
 }
 .latest-news {
-  height: 100vh;
+  position: relative;
+  min-height: 100vh;
   display: flex;
   flex-direction: column;
-  justify-content: center;
+  gap: 3rem;
   align-items: center;
-  gap: 4rem;
+}
+
+.p-top {
+  position: absolute;
+  top: 0;
+  left: 0;
+  font-size: 12rem;
+}
+
+.latest-news-title {
+  display: flex;
+  flex-direction: column;
+  gap: 1rem;
+  margin: 7rem 0 3rem 0;
+  text-align: center;
 }
 
 .news-container {
   width: 80%;
   display: flex;
-  gap: 2rem;
-  padding: 3rem 0rem;
   justify-content: space-between;
   align-items: center;
+  gap: 2rem;
 }
 
 .news {
+  width: 30%;
   background-color: #f1ece4;
   display: flex;
   flex-direction: column;
   align-items: center;
-  width: 22rem;
   gap: 1rem;
+  height: 100%;
 }
 .news img {
-  height: 15rem;
+  display: block;
   width: 100%;
+  height: 100%;
 }
 .news button {
   background-color: #ffffff;
@@ -343,6 +388,7 @@ footer {
   width: 50%;
   padding: 1rem;
   border: none;
+  border-radius: 0.35rem;
 }
 .news button:hover {
   cursor: pointer;
@@ -351,7 +397,7 @@ footer {
 }
 
 .news-text {
-  padding: 2rem 0rem;
+  padding: 1rem 1rem 2rem 1rem;
   width: 80%;
   display: flex;
   flex-direction: column;
@@ -361,7 +407,7 @@ footer {
 .date-user {
   display: flex;
   justify-content: flex-start;
-  gap: 0.7rem;
+  gap: 1rem;
 }
 .date-user i {
   color: #c8a96a;
@@ -374,8 +420,87 @@ footer {
   width: 80%;
   display: flex;
   justify-content: space-around;
+  margin-bottom: 7rem;
 }
 
+@media (max-width: 1450px) {
+  .news {
+    width: 35%;
+  }
+}
+@media (max-width: 1300px) {
+  .news {
+    width: 35%;
+  }
+  .news-text {
+    padding-bottom: 1rem;
+  }
+  .news-text button {
+    width: 60%;
+  }
+  .date-user {
+    gap: 1rem;
+  }
+  .news-photos {
+    margin-top: 2rem;
+  }
+  .news-photos img {
+    height: 4rem;
+    width: 4rem;
+  }
+}
+@media (max-width: 1300px) {
+  .news-container {
+    flex-direction: column;
+  }
+  .news {
+    width: 100%;
+    flex-direction: row;
+  }
+  .news-text {
+    align-items: center;
+    justify-content: center;
+  }
+}
+@media (max-width: 1000px) {
+  .news img {
+    width: 40%;
+    height: 100%;
+  }
+}
+@media (max-width: 900px) {
+  .news {
+    flex-direction: column;
+    width: 50%;
+  }
+  .news .news-text {
+    padding: 0 0 1rem 0;
+  }
+  .news img {
+    width: 100%;
+  }
+  .news button {
+    width: 90%;
+  }
+}
+@media (max-width: 600px) {
+  .p-top {
+    font-size: 3rem;
+  }
+  .date-user {
+    flex-direction: column;
+  }
+  .date-user p {
+    font-size: 0.8rem;
+  }
+  .news-photos {
+    gap: 1rem;
+  }
+  .news-photos img {
+    height: 3.5rem;
+    width: 3.5rem;
+  }
+}
 * {
   box-sizing: border-box;
   padding: 0;
