--- a/footer.scss
+++ b/footer.scss
@@ -3,26 +3,26 @@ footer {
   color: rgb(138, 138, 138);
   display: flex;
   flex-direction: column;
-  justify-content: center;
+  // justify-content: center;
   align-items: center;
   background-image: url(./img/footer/img-ng-footer.jpg);
   background-size: cover;
   background-repeat: no-repeat;
   display: flex;
-  gap: 5rem;
+  gap: 10rem;
   flex-direction: column;
   min-height: 100vh;
 }
 
 .footer-title {
-  margin-bottom: 7rem;
+  margin-top: 5rem;
 }
 
 .footer-links {
   display: flex;
   justify-content: space-between;
   width: 80%;
-  margin-bottom: 3rem;
+  margin-bottom: 7rem;
 }
 
 .footer-link {
@@ -162,9 +162,13 @@ footer {
 }
 
 @media (max-width: 750px) {
+  footer {
+    gap: 5rem;
+  }
   .footer-links {
     display: grid;
     row-gap: 5rem;
+    margin-bottom: 2rem;
   }
 }
 
