--- a/style.scss
+++ b/style.scss
@@ -2,6 +2,8 @@
 @import "header.scss";
 @import "footer.scss";
 @import "latest-news.scss";
+@import "chefs.scss";
+@import "restaurants-photos.scss";
 
 * {
   box-sizing: border-box;
@@ -60,6 +62,14 @@ body {
   }
 }
 
+@media (max-width: 1700px) {
+  .meet-chefs,
+  .latest-news {
+    .p-top {
+      font-size: 8rem;
+    }
+  }
+}
 @media (max-width: 1250px) {
   img {
     bottom: 80%;
