--- a/choose_your_best_category.scss
+++ b/choose_your_best_category.scss
@@ -3,7 +3,7 @@
     width: 100%;
     background-image: url(img/banner/imgbgcategory.jpg);
     background-color: #faf6f0b2 ;
-    background-size: 100% 100%;
+    background-size: contain;
     background-position: center left;
     text-align: center;
     position: relative;
@@ -64,6 +64,8 @@
 
 @media only screen and (max-width:1200px){
     .choose_your_best_category{
+        padding-bottom : 30px;
+        background-size: 90%;
         .category_absolute{
             font-size: 10rem;
         }
@@ -72,15 +74,34 @@
 
 @media only screen and (max-width:950px){
     .choose_your_best_category{
+        padding-bottom : 50px;
         .category_absolute{
             font-size: 7rem;
         }
+        .title_choose_your_category{
+            h2{
+                padding-top: 110px;
+                font-size: 2.5rem;
+            }
+        }
+        .cards{
+            padding: 110px 0;
+        }
+
     }
 }
 @media only screen and (max-width:650px){
     .choose_your_best_category{
+        padding-bottom : 120px;
         .category_absolute{
             font-size: 5rem;
+        }
+        .title_choose_your_category{
+            h2{
+                padding-top: 110px;
+                font-size: 2rem;
+                letter-spacing: -2px;
+            }
         }
     }
 }
@@ -88,6 +109,12 @@
     .choose_your_best_category{
         .category_absolute{
             font-size: 3rem;
+        }
+        .title_choose_your_category{
+            h2{
+                padding-top: 110px;
+                font-size: 2rem;
+            }
         }
     }
 }
