--- a/style.css
+++ b/style.css
@@ -1,4 +1,3 @@
-@charset "UTF-8";
 header {
   min-height: 90vh;
   background-image: url(img/slider/img_bg_slider_home01.jpg);
@@ -308,7 +307,7 @@ footer {
   width: 100%;
   background-image: url(img/banner/imgbgcategory.jpg);
   background-color: rgba(250, 246, 240, 0.6980392157);
-  background-size: 100% 100%;
+  background-size: contain;
   background-position: center left;
   text-align: center;
   position: relative;
@@ -368,31 +367,278 @@ footer {
 }
 
 @media only screen and (max-width: 1200px) {
+  .choose_your_best_category {
+    padding-bottom: 30px;
+    background-size: 90%;
+  }
   .choose_your_best_category .category_absolute {
     font-size: 10rem;
   }
 }
 @media only screen and (max-width: 950px) {
+  .choose_your_best_category {
+    padding-bottom: 50px;
+  }
   .choose_your_best_category .category_absolute {
     font-size: 7rem;
   }
+  .choose_your_best_category .title_choose_your_category h2 {
+    padding-top: 110px;
+    font-size: 2.5rem;
+  }
+  .choose_your_best_category .cards {
+    padding: 110px 0;
+  }
 }
 @media only screen and (max-width: 650px) {
+  .choose_your_best_category {
+    padding-bottom: 120px;
+  }
   .choose_your_best_category .category_absolute {
     font-size: 5rem;
+  }
+  .choose_your_best_category .title_choose_your_category h2 {
+    padding-top: 110px;
+    font-size: 2rem;
+    letter-spacing: -2px;
   }
 }
 @media only screen and (max-width: 450px) {
   .choose_your_best_category .category_absolute {
     font-size: 3rem;
   }
+  .choose_your_best_category .title_choose_your_category h2 {
+    padding-top: 110px;
+    font-size: 2rem;
+  }
 }
-/* media du header => 
-- passe en menu burger à max 1400px
-Pour le responsive : 
-max 950px, 600px, 350px */
-/* media du footer =>
-1250px*/
+main .why_choose_us {
+  width: 100%;
+  min-height: 200vh;
+  position: relative;
+}
+main .why_choose_us .circle_food {
+  position: absolute;
+  left: 50%;
+  transform: translateX(-50%);
+  top: -10%;
+  border-radius: 50%;
+  border: solid 30px #FFFFFF;
+  z-index: 0;
+}
+main .why_choose_us .images_top_choose_us {
+  width: 100%;
+  min-height: 400px;
+  position: relative;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  padding: 10% 7% 5% 10%;
+}
+main .why_choose_us .images_top_choose_us img {
+  z-index: 1;
+}
+main .about_us {
+  position: relative;
+  z-index: -2;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  padding: 13% 0 0% 0%;
+}
+main .about_us .title_about_us {
+  width: 100%;
+  text-align: center;
+  position: relative;
+}
+main .about_us .title_about_us h2 {
+  text-transform: uppercase;
+  font-size: 3rem;
+  font-weight: 100;
+  letter-spacing: -2px;
+}
+main .about_us .title_about_us p {
+  padding-top: 20px;
+}
+main .about_us .title_about_us .icon_about_absolute {
+  position: absolute;
+  top: 0;
+  right: 10%;
+}
+main .about_us .about_us_absolute {
+  position: absolute;
+  left: 10px;
+  top: 150px;
+  font-size: 13rem;
+  letter-spacing: -7px;
+  color: #F5EEE3;
+  z-index: -1;
+  text-transform: uppercase;
+}
+main .about_us .contenu_about_us {
+  margin: 7% 22%;
+  display: flex;
+}
+main .about_us .contenu_about_us .text_about_us {
+  padding: 7%;
+  line-height: 50px;
+}
+main .about_us .contenu_about_us .text_about_us p {
+  font-size: 1.5rem;
+  margin-bottom: 60px;
+}
+main .about_us .contenu_about_us .text_about_us .btn_about_us {
+  background-color: #C8A96A;
+  padding: 20px 30px;
+  border-radius: 5px;
+  font-family: "brands";
+  font-weight: 400;
+  color: #FFFFFF;
+}
+main .about_us .contenu_about_us .text_about_us .btn_about_us i {
+  padding-left: 10px;
+}
+
+@media only screen and (max-width: 1600px) {
+  .why_choose_us .circle_food {
+    width: 40%;
+  }
+  .why_choose_us .images_top_choose_us {
+    padding: 10% 2% 2% 10%;
+  }
+  .why_choose_us .about_us .title_about_us h2 {
+    margin-top: 30px;
+  }
+  .why_choose_us .about_us .title_about_us .icon_about_absolute {
+    top: 0;
+    right: 10%;
+  }
+  .why_choose_us .about_us .contenu_about_us {
+    margin: 7% 15%;
+  }
+}
+@media only screen and (max-width: 1300px) {
+  .about_us .title_about_us h2 {
+    font-size: 3rem;
+    margin-top: 100px;
+  }
+  .about_us .title_about_us .icon_about_absolute {
+    top: 0;
+    right: 10%;
+  }
+  .about_us .contenu_about_us {
+    margin: 7% 10%;
+  }
+  .about_us .about_us_absolute {
+    top: 70px;
+    font-size: 6rem;
+  }
+}
+@media only screen and (max-width: 1200px) {
+  .why_choose_us .images_top_choose_us {
+    padding: 10% 2% 2% 10%;
+  }
+  .why_choose_us .images_top_choose_us img {
+    width: 200px;
+  }
+  .why_choose_us .about_us .contenu_about_us {
+    margin: 7% 5%;
+  }
+}
+@media only screen and (max-width: 950px) {
+  .why_choose_us .circle_food {
+    width: 50%;
+    border: solid 10px;
+  }
+  .why_choose_us .about_us .about_us_absolute {
+    font-size: 7rem;
+  }
+  .why_choose_us .about_us .title_about_us h2 {
+    font-size: 2rem;
+    margin-top: 100px;
+  }
+  .why_choose_us .about_us .title_about_us .icon_about_absolute {
+    top: 0;
+    right: 10%;
+    width: 100px;
+  }
+  .why_choose_us .about_us .contenu_about_us {
+    margin: 15% 5%;
+    flex-direction: column;
+    text-align: center;
+  }
+  .why_choose_us .about_us .contenu_about_us .text_about_us p {
+    font-size: 1.1rem;
+  }
+}
+@media only screen and (max-width: 650px) {
+  .why_choose_us .circle_food {
+    width: 80%;
+    border: solid 10px;
+  }
+  .why_choose_us .images_top_choose_us {
+    flex-direction: column;
+  }
+  .why_choose_us .images_top_choose_us img:first-child {
+    margin-top: 180px;
+    margin-bottom: 30px;
+  }
+  .why_choose_us .about_us .about_us_absolute {
+    font-size: 5rem;
+  }
+}
+@media only screen and (max-width: 450px) {
+  .why_choose_us .about_us .about_us_absolute {
+    font-size: 3.5rem;
+  }
+  .why_choose_us .about_us .title_about_us h2 {
+    font-size: 1.5rem;
+    margin-top: 130px;
+  }
+}
+@media only screen and (max-width: 350px) {
+  .why_choose_us .circle_food {
+    width: 100%;
+    border: solid 10px;
+  }
+  .why_choose_us .images_top_choose_us img {
+    margin-top: 70px;
+  }
+  .why_choose_us .about_us .about_us_absolute {
+    font-size: 3rem;
+  }
+  .why_choose_us .about_us .title_about_us h2 {
+    font-size: 1.5rem;
+    margin-top: 120px;
+  }
+  .why_choose_us .about_us .contenu_about_us .text_about_us p {
+    font-size: 1rem;
+    padding: 0% 10%;
+  }
+}
+@media only screen and (max-width: 300px) {
+  .why_choose_us .about_us .about_us_absolute {
+    font-size: 2.5rem;
+    top: 120px;
+  }
+  .why_choose_us .about_us .title_about_us h2 {
+    font-size: 1rem;
+    margin-top: 100px;
+  }
+  .why_choose_us .about_us .title_about_us p {
+    font-size: 0.8rem;
+  }
+  .why_choose_us .about_us .title_about_us .icon_about_absolute {
+    width: 70px;
+    top: 0;
+    right: 10%;
+  }
+  .why_choose_us .about_us .contenu_about_us .text_about_us p {
+    font-size: 1rem;
+    line-height: 30px;
+    padding: 0% 20%;
+  }
+}
 * {
   box-sizing: border-box;
   padding: 0;
