--- a/layout/footer.scss
+++ b/layout/footer.scss
@@ -3,7 +3,7 @@ footer {
   color: rgb(138, 138, 138);
   display: flex;
   flex-direction: column;
-  // justify-content: center;
+  justify-content: center;
   align-items: center;
   background-image: url(./img/footer/img-ng-footer.jpg);
   background-size: cover;
@@ -11,7 +11,7 @@ footer {
   display: flex;
   gap: 10rem;
   flex-direction: column;
-  min-height: 100vh;
+  padding-bottom: 3rem;
 }
 
 .footer-title {
@@ -172,9 +172,3 @@ footer {
     margin-bottom: 2rem;
   }
 }
-
-// @media (max-width: 600px) {
-//   .footer-links {
-//     grid-template-columns: 60% 20%;
-//   }
-// }
