--- a/layout/restaurants-photos.scss
+++ b/layout/restaurants-photos.scss
@@ -1,13 +1,12 @@
 .restaurant-photos-container {
   position: relative;
-  //   width: 100%;
-  min-height: 140vh;
+  width: 100%;
   display: flex;
   flex-direction: column;
   justify-content: center;
   align-items: center;
-  gap: 3rem;
-  padding: 5rem 0;
+  gap: 5rem;
+  padding: 6rem 0rem;
 
   button {
     padding: 1rem 2rem;
@@ -24,10 +23,9 @@
   .p-low {
     position: absolute;
     color: $creme;
-    top: 1%;
-    left: 3%;
-    font-size: 12rem;
-    letter-spacing: 2rem;
+    top: 3%;
+    left: 1%;
+    font-size: 12.5rem;
     z-index: -1;
   }
 }
@@ -36,7 +34,7 @@
   display: flex;
   flex-direction: column;
   gap: 2rem;
-  align-items: center;
+  text-align: center;
   h2 {
     font-size: 3rem;
   }
@@ -45,6 +43,7 @@
   }
 }
 .resto-photos {
+  width: 80%;
   margin-top: 5rem;
   display: grid;
   grid-template-columns: repeat(2, 1fr);
@@ -53,6 +52,7 @@
   column-gap: 1rem;
   img {
     width: 100%;
+    max-height: 350px;
   }
 }
 
@@ -61,9 +61,6 @@
   justify-content: space-between;
   gap: 1rem;
   img {
-    max-height: 400px;
     width: 50%;
   }
 }
-
-// Z-index is (still) not working so I might have to display things differently in my HTML. Perhaps remove the title class.
