--- a/style.css
+++ b/style.css
@@ -176,6 +176,7 @@ footer {
   color: rgb(138, 138, 138);
   display: flex;
   flex-direction: column;
+  justify-content: center;
   align-items: center;
   background-image: url(./img/footer/img-ng-footer.jpg);
   background-size: cover;
@@ -183,7 +184,7 @@ footer {
   display: flex;
   gap: 10rem;
   flex-direction: column;
-  min-height: 100vh;
+  padding-bottom: 3rem;
 }
 
 .footer-title {
@@ -341,11 +342,10 @@ footer {
 }
 .latest-news {
   position: relative;
-  min-height: 100vh;
   width: 100%;
   display: flex;
   flex-direction: column;
-  gap: 3rem;
+  gap: 5rem;
   align-items: center;
 }
 .latest-news .p-top {
@@ -353,17 +353,24 @@ footer {
   color: #f1ece4;
   top: 1%;
   left: 3%;
-  font-size: 12rem;
+  font-size: 13.5rem;
   letter-spacing: 1rem;
   z-index: -1;
 }
 
 .latest-news-title {
+  text-align: center;
   display: flex;
   flex-direction: column;
-  gap: 1rem;
+  gap: 2rem;
+  align-items: center;
   margin: 7rem 0 3rem 0;
-  text-align: center;
+}
+.latest-news-title h2 {
+  font-size: 3rem;
+}
+.latest-news-title p {
+  font-size: 1.5rem;
 }
 
 .news-container {
@@ -401,19 +408,6 @@ footer {
   cursor: pointer;
   background-color: #c8a96a;
   color: #ffffff;
-}
-
-.latest-news-title {
-  display: flex;
-  flex-direction: column;
-  gap: 2rem;
-  align-items: center;
-}
-.latest-news-title h2 {
-  font-size: 3rem;
-}
-.latest-news-title p {
-  font-size: 1.5rem;
 }
 
 .news-text {
@@ -497,9 +491,6 @@ footer {
   }
 }
 @media (max-width: 600px) {
-  .p-top {
-    font-size: 3rem;
-  }
   .date-user {
     flex-direction: column;
   }
@@ -518,21 +509,26 @@ footer {
   position: relative;
   padding: 7rem 0;
   width: 100%;
-  min-height: 100vh;
   display: flex;
   flex-direction: column;
   background-color: black;
+  justify-content: center;
   align-items: center;
   gap: 10rem;
+  z-index: -1;
+  padding-bottom: 12rem;
 }
 .meet-chefs p {
   color: #ffffff;
 }
 .meet-chefs .p-top {
   position: absolute;
+  color: rgba(255, 255, 255, 0.068);
   top: 3%;
-  left: 0;
-  font-size: 12rem;
+  left: 3%;
+  font-size: 12.5rem;
+  letter-spacing: 1rem;
+  z-index: -1;
 }
 
 .chefs-title {
@@ -541,6 +537,12 @@ footer {
   flex-direction: column;
   gap: 2rem;
   text-align: center;
+}
+.chefs-title h2 {
+  font-size: 3rem;
+}
+.chefs-title p {
+  font-size: 1.5rem;
 }
 
 .chefs-container {
@@ -566,13 +568,13 @@ footer {
 
 .restaurant-photos-container {
   position: relative;
-  min-height: 140vh;
+  width: 100%;
   display: flex;
   flex-direction: column;
   justify-content: center;
   align-items: center;
-  gap: 3rem;
-  padding: 5rem 0;
+  gap: 5rem;
+  padding: 6rem 0rem;
 }
 .restaurant-photos-container button {
   padding: 1rem 2rem;
@@ -589,10 +591,9 @@ footer {
 .restaurant-photos-container .p-low {
   position: absolute;
   color: #f1ece4;
-  top: 1%;
-  left: 3%;
-  font-size: 12rem;
-  letter-spacing: 2rem;
+  top: 3%;
+  left: 1%;
+  font-size: 12.5rem;
   z-index: -1;
 }
 
@@ -600,7 +601,7 @@ footer {
   display: flex;
   flex-direction: column;
   gap: 2rem;
-  align-items: center;
+  text-align: center;
 }
 .restaurant-photos-title h2 {
   font-size: 3rem;
@@ -610,6 +611,7 @@ footer {
 }
 
 .resto-photos {
+  width: 80%;
   margin-top: 5rem;
   display: grid;
   grid-template-columns: repeat(2, 1fr);
@@ -619,6 +621,7 @@ footer {
 }
 .resto-photos img {
   width: 100%;
+  max-height: 350px;
 }
 
 .photos-together {
@@ -627,7 +630,6 @@ footer {
   gap: 1rem;
 }
 .photos-together img {
-  max-height: 400px;
   width: 50%;
 }
 
@@ -643,6 +645,24 @@ body {
   width: 100%;
 }
 
+@media (max-width: 1800px) {
+  .meet-chefs .p-top,
+  .latest-news .p-top {
+    font-size: 10.5rem;
+  }
+  .restaurant-photos-container .p-low {
+    font-size: 10.5rem;
+  }
+}
+@media (max-width: 1600px) {
+  .meet-chefs .p-top,
+  .latest-news .p-top {
+    font-size: 9rem;
+  }
+  .restaurant-photos-container .p-low {
+    font-size: 9rem;
+  }
+}
 @media only screen and (max-width: 1400px) {
   header .topnav .icon_hamburger {
     display: block;
@@ -681,10 +701,11 @@ body {
   header .contenu_header .imgAndtitle h1 {
     font-size: 5rem;
   }
-}
-@media (max-width: 1700px) {
   .meet-chefs .p-top,
   .latest-news .p-top {
+    font-size: 8rem;
+  }
+  .restaurant-photos-container .p-low {
     font-size: 8rem;
   }
 }
@@ -695,6 +716,22 @@ body {
   .footer-bottom {
     flex-direction: column;
     align-items: center;
+  }
+  .meet-chefs .p-top,
+  .latest-news .p-top {
+    font-size: 6.5rem;
+  }
+  .restaurant-photos-container .p-low {
+    font-size: 6.5rem;
+  }
+}
+@media (max-width: 1000px) {
+  .meet-chefs .p-top,
+  .latest-news .p-top {
+    font-size: 5rem;
+  }
+  .restaurant-photos-container .p-low {
+    font-size: 5rem;
   }
 }
 @media only screen and (max-width: 950px) {
@@ -716,6 +753,25 @@ body {
     font-size: 4rem;
     margin-top: 100px;
     line-height: 100px;
+  }
+  .chefs-title h2,
+  .latest-news-title h2,
+  .restaurant-photos-title h2 {
+    font-size: 2rem;
+  }
+  .chefs-title p,
+  .latest-news-title p,
+  .restaurant-photos-title p {
+    font-size: 1rem;
+  }
+}
+@media (max-width: 500px) {
+  .meet-chefs .p-top,
+  .latest-news .p-top {
+    font-size: 3.5rem;
+  }
+  .restaurant-photos-container .p-low {
+    font-size: 3.5rem;
   }
 }
 @media only screen and (max-width: 350px) {
